# ChangeLog for app-emacs/imaxima
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/imaxima/ChangeLog,v 1.22 2009/03/18 16:09:18 ulm Exp $

  18 Mar 2009; Ulrich Mueller <ulm@gentoo.org> imaxima-0.99.ebuild,
  imaxima-1.0_rc2.ebuild:
  Remove breqn from list of alternative dependencies.

  28 Feb 2009; Ulrich Mueller <ulm@gentoo.org> imaxima-0.99.ebuild,
  imaxima-1.0_rc2.ebuild:
  Remove version restriction from maxima dependency.

*imaxima-1.0_rc2 (23 Feb 2009)

  23 Feb 2009; Ulrich Mueller <ulm@gentoo.org> files/50imaxima-gentoo.el,
  +imaxima-1.0_rc2.ebuild:
  Version bump. Add examples USE flag.

  04 Sep 2008; Ulrich Mueller <ulm@gentoo.org> imaxima-0.99.ebuild:
  Fix texlive dependency, thanks aballier.

  04 May 2008; Ulrich Mueller <ulm@gentoo.org> -imaxima-0.98-r1.ebuild:
  Remove old.

  29 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org>
  imaxima-0.98-r1.ebuild, imaxima-0.99.ebuild:
  Added dependency blocking to maxima version >= 5.15, since imaxima is
  included in these later versions

*imaxima-0.99 (22 Feb 2008)

  22 Feb 2008; Ulrich Mueller <ulm@gentoo.org> -imaxima-0.97a.ebuild,
  imaxima-0.98-r1.ebuild, +imaxima-0.99.ebuild:
  Version bump. Change TeX dependency to virtual/latex-base. Remove old.

*imaxima-0.98-r1 (23 Nov 2007)

  23 Nov 2007; Ulrich Mueller <ulm@gentoo.org> files/50imaxima-gentoo.el,
  imaxima-0.97a.ebuild, -imaxima-0.98.ebuild, +imaxima-0.98-r1.ebuild:
  Install Emacs Lisp files in a subdirectory of site-lisp.

  03 Nov 2007; Ulrich Mueller <ulm@gentoo.org> imaxima-0.98.ebuild:
  Inherit elisp instead of elisp-common; restore src_compile.

*imaxima-0.98 (03 Nov 2007)

  03 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> +imaxima-0.98.ebuild:
  Version bump

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org> imaxima-0.94b.ebuild,
  imaxima-0.97.ebuild, imaxima-0.97a.ebuild:
  Remove redundant virtual/emacs dependency. Add some quotes.

*imaxima-0.97a (31 Jul 2007)
