@@ -1,7 +1,5 @@
 AUX 50imaxima-gentoo.el 200 RMD160 864328bcbe3063e492ceb9c278aca3b4e2a10b34 SHA1 a07868de6a36dd525c04119b9b177d7c53d764eb SHA256 c899d2497215a0e98275dc20e052e361b4f77f0e977be3568e95ca57e8a8791a
-DIST imaxima-imath-0.99.tar.gz 176070 RMD160 6b807043815625758dde51fefd61a4bddedb9505 SHA1 ca66cf449aeb9a83d687c1e131b4b611dd3ed123 SHA256 72a172448f1848f023e3e84154df8d1f9d234fd5a2d551d1f26c070896b4d282
 DIST imaxima-imath-1.0rc2.tar.gz 399982 RMD160 17e4895416ba4485584b3c855a4a164e8b324fb1 SHA1 2124012990cacca057b48351b3de08087f0e94f0 SHA256 ce86692e035bb8a5e546e6761709caea6ce3e0ad12f10e97de2474483a14b842
-EBUILD imaxima-0.99.ebuild 1135 RMD160 0ff0f0ef4c253c88fc86fbd99cc7ceb29cad2b65 SHA1 d43b0a945ea2230f2dbe3706f5beef6779f87bd2 SHA256 969214f285d59ca1e697a9267cd2153980588f8caafbf3577c09ec571ffe43c0
-EBUILD imaxima-1.0_rc2.ebuild 1176 RMD160 e3fe6f506f0861b31a9eb59e990330d163c05425 SHA1 0d568b55c53e09941accc8e0c40a5190bc495d6d SHA256 74eb3c78ea3ac389c6d6e904936fc472d3a745f015b292737cb20f053349a1c4
-MISC ChangeLog 3478 RMD160 0b2a8bc897b3f242a1726d30eca237534ec3d51d SHA1 c7091e376e6be5ad5635719a1d1ea511068302fc SHA256 27359b0fc80c55ba01fa1fd8ae9d38efa1fc33a0339cba8a154faec62756a22f
+EBUILD imaxima-1.0_rc2.ebuild 1169 RMD160 d38fd7a06ba9b5f5573508c8205879b561da52c2 SHA1 adbe0156ebc66ef5fb9536293e167adddb899b81 SHA256 588f2598d27e6c1a2ceff90e1d954c4988dfc32370e417fcb8872a7cd6fa3076
+MISC ChangeLog 3689 RMD160 f8d9d54341cd530635a3fb725dfe7ceb41750f50 SHA1 ac2b22a16cc941c340c52a60222dd5d42a99bf13 SHA256 7ed5272a0bb9974d8410cd0887293f0282139ff831615f9d224f63cd1e7a56aa
 MISC metadata.xml 709 RMD160 67388418aa6d6c63178d7434cb3cb8a99dfc04b0 SHA1 6f18f91f69d8e650398673ded5cdf8f25a31ce61 SHA256 44e217de8c5f40e329de8f4b32f620aca544791358329f8a9717c9d68f089c2a
