@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-emacs/imaxima/ChangeLog,v 1.22 2009/03/18 16:09:18 ulm Exp $
 
+  21 Mar 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> -imaxima-0.99:
+  Imported imaxima from portage, removed version restriction from dev-texlive/texlive-mathextra dependency, removed old version
+
   18 Mar 2009; Ulrich Mueller <ulm@gentoo.org> imaxima-0.99.ebuild,
   imaxima-1.0_rc2.ebuild:
   Remove breqn from list of alternative dependencies.
